#1113: finished implementing integration tests